--- a/src/components/Sections/Projects/LightEffect.css
+++ b/src/components/Sections/Projects/LightEffect.css
@@ -3,7 +3,11 @@
   position: fixed;
   width: 300px;
   height: 300px;
-  background: radial-gradient(circle, rgba(77, 171, 247, 0.1) 0%, rgba(77, 171, 247, 0) 70%);
+  background: radial-gradient(
+    circle,
+    rgba(77, 171, 247, 0.1) 0%,
+    rgba(77, 171, 247, 0) 70%
+  );
   border-radius: 50%;
   pointer-events: none;
   z-index: -1;
